@@ -922,41 +922,48 @@ void user_options_preprocess (hashcat_ctx_t *hashcat_ctx)
 
   if (user_options->opencl_info == true
    || user_options->keyspace    == true
-   || user_options->benchmark   == true
    || user_options->stdout_flag == true
    || user_options->speed_only  == true)
   {
-    user_options->show                = false;
-    user_options->left                = false;
     user_options->gpu_temp_disable    = true;
+    user_options->left                = false;
+    user_options->logfile_disable     = true;
+    user_options->nvidia_spin_damp    = 0;
+    user_options->outfile_check_timer = 0;
     user_options->potfile_disable     = true;
     user_options->powertune_enable    = false;
-    user_options->restore             = false;
     user_options->restore_disable     = true;
+    user_options->restore             = false;
     user_options->restore_timer       = 0;
-    user_options->logfile_disable     = true;
-    user_options->weak_hash_threshold = 0;
-    user_options->nvidia_spin_damp    = 0;
+    user_options->show                = false;
     user_options->status              = false;
     user_options->status_timer        = 0;
-    user_options->outfile_check_timer = 0;
+    user_options->weak_hash_threshold = 0;
   }
 
   if (user_options->benchmark == true)
   {
-    user_options->session             = "benchmark";
     user_options->attack_mode         = ATTACK_MODE_BF;
+    user_options->gpu_temp_disable    = false;
     user_options->increment           = false;
+    user_options->left                = false;
+    user_options->logfile_disable     = true;
+    user_options->nvidia_spin_damp    = 0;
+    user_options->potfile_disable     = true;
+    user_options->powertune_enable    = true;
+    user_options->restore_disable     = true;
+    user_options->restore             = false;
+    user_options->restore_timer       = 0;
+    user_options->session             = "benchmark";
+    user_options->show                = false;
+    user_options->status              = false;
+    user_options->status_timer        = 0;
     user_options->speed_only          = true;
+    user_options->weak_hash_threshold = 0;
 
     if (user_options->workload_profile_chgd == false)
     {
       user_options->workload_profile = 3;
-    }
-
-    if (user_options->powertune_enable == true)
-    {
-      user_options->gpu_temp_disable = false;
     }
   }
 
