@@ -20,6 +20,7 @@
 - Added support for --powertune-enable for AMD-GPU-PRO driver
 - Added option --keep-guessing to continue cracking hashes even after they have been cracked (to find collisions)
 - Fixed a bug when cracking a large salted hashlist: If a word is rejected this produces so high CPU load that cracking process doesn't start
+- Added core-clock and memory-clock to output in benchmark mode with --machine-readable enabled
 
 ##
 ## Algorithms
